--- a/plugin.video.HdFilmeTV/changelog.txt
+++ b/plugin.video.HdFilmeTV/changelog.txt
@@ -1,9 +1,8 @@
-Version 0.0.8
- Vimeo links Fixed!
-Version 0.0.7
- Links Fixes!
-Version 0.0.6
- Links Fixes!
+Version 0.0.9
+ Back to version 0.0.5!
+ .
+ .
+ .
 Version 0.0.5
  Links Fixes!
 Version 0.0.4
